fixed tiny layout issue

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ section.race section.racetrack div {
 section.race section.history p {
     text-indent: 50px;
     text-align: left;
+    line-height: 26px;
 }
 
 section.debug {
